--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -7,3 +7,6 @@
   <strong>Email:</strong>
   <%= @member.email %>
 </h7><br>
+
+<%= link_to 'Edit', edit_member_path(@member) %> |
+<%= link_to 'Back', members_path %>
