--- a/app/views/admin/members/new.html.erb
+++ b/app/views/admin/members/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for(@member) do |f| %>
+    <%= form_for(@admin_member) do |f| %>
       <%= render 'fields', f: f %>
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
     <% end %>
