--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,8 @@
           <li><%= link_to "Home", root_path %></li>
           <% if signed_in? %>
             <li><%= link_to "Members", admin_members_path %></li>
+            <li><%= link_to "Positions", admin_positions_path %></li>
+            <li><%= link_to "Projects", admin_projects_path %></li>
             <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
           <% else %>
             <li><%= link_to "Sign in", signin_path %></li>
