--- a/app/views/admin/members/_search.html.erb
+++ b/app/views/admin/members/_search.html.erb
@@ -2,7 +2,7 @@
   <table>
     <tr>
       <td>
-        Team <%= select_tag 'team_id', options_from_collection_for_select(Team.all, :id, :name, params[:team_id]), include_blank: true %>
+        Members of Teams <%= select_tag 'team_id', options_from_collection_for_select(Team.all, :id, :name, params[:team_id]), include_blank: true %>
       </td>
       <td><%= submit_tag "Search", :name => nil %></td>
     </tr>
