--- a/app/views/admin/members/new.html.erb
+++ b/app/views/admin/members/new.html.erb
@@ -3,9 +3,27 @@
 
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for(@admin_member) do |f| %>
-      <%= render 'fields', f: f %>
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+    <%= form_for (@member) do |f| %>
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
+
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+
+      <%= f.label :project, "Projects joined" %>
+         <% @projects.each do |project| %>
+         <%= check_box_tag "member[project_ids][]", project.id %>
+         <%= project.name %>
+      <% end %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "Confirm Password" %>
+      <%= f.password_field :password_confirmation %>
+
+      
+      <%= f.submit "Create member", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
 </div>
