--- a/app/views/admin/skills/edit.html.erb
+++ b/app/views/admin/skills/edit.html.erb
@@ -1,6 +1,15 @@
 <h1>Editing skill</h1>
 
-<%= render 'form' %>
+<%= form_for @skill do |f| %>
+  <div class="field">
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
+  </div>
+  
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
 
 <%= link_to 'Show', @skill %> |
 <%= link_to 'Back', skills_path %>
