--- a/app/views/admin/skills/new.html.erb
+++ b/app/views/admin/skills/new.html.erb
@@ -4,7 +4,8 @@
 <div class="row">
   <div class="span6 offset3">
     <%= form_for [:admin, @skill] do |f| %>
-      <%= render 'fields', f: f %>
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
       <%= f.submit "Create new skill", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
